--- a/src/css/common.css
+++ b/src/css/common.css
@@ -55,7 +55,6 @@ button[data-stop] {
   max-width: 150px;
   padding: 8px 12px;
   margin-top: 30px;
-  margin-right: 30px;
 
   border-radius: 10px;
   border: transparent;
@@ -83,4 +82,8 @@ button[data-stop]:focus {
 button[disabled] {
   background-color: #ebecf0;
   color: #61677c;
+}
+
+button[data-stop] {
+  margin-left: 30px;
 }
