--- a/src/css/common.css
+++ b/src/css/common.css
@@ -87,3 +87,46 @@ button[disabled] {
 button[data-stop] {
   margin-left: 30px;
 }
+
+.timer {
+  display: flex;
+  gap: 15px;
+  position: relative;
+  top: 15px;
+  left: 50px;
+}
+
+#datetime-picker {
+  position: relative;
+  left: 10px;
+  margin-right: 20px;
+  padding: 8px 12px;
+
+  font-size: 16px;
+  font: inherit;
+  font-weight: bold;
+  text-align: center;
+
+  color: #0f1d4e;
+  background-color: #d9e5fc;
+  text-shadow: 1px 1px 0 #fff;
+  border: 0 solid #e2e8f0;
+  border-radius: 10px;
+  box-shadow: -2px -2px 5px #fff, 2px 2px 5px #babecc;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.value {
+  font-size: 26px;
+  font-weight: bold;
+  text-align: center;
+
+  color: #0f1d4e;
+}
